Fix loading icon on firefox/mobile

--- a/static/css/new.css
+++ b/static/css/new.css
@@ -120,6 +120,6 @@ html {
   display:none;
 }
 
-#loading {
-  display:none;
+.hidden{
+  display:none!important;
 }
